# hdf5plot

./: .gitignore  README.md  crizz-hdf5plotter.desktop  hdf5plot  hdf5plot_  install.sh  install_userwide.sh  pyproject.toml  requirements.txt
snap/: snapcraft.yaml
src/hdf5plot/: example_dump.py  hdf5_plotter.py  hdf5_save.py  save.py
