[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdf5plot"
version = "0.0.1"
authors = [
  { name="Carlo Rizzardo", email="cr.git.mail@gmail.com" },
]
description = "Plotter for hdf5 files"
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "packaging",
    "pillow",
    "pyparsing",
    "python-dateutil",
    "six",
    "seaborn",
    "PyQt5"
]

[project.scripts]
hdf5plot = "hdf5plot.hdf5_plotter:main"
